--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,10 @@
             "type": "go",
             "request": "launch",
             "mode": "debug",
-            "program": "cmd/iratad/iratad.go"
+            "program": "cmd/iratad/iratad.go",
+            "env": {
+                "IRATA_ENABLE_CACHING": "1",
+            }
         }
     ]
 }
